<resources>
    <string name="app_name">Posted</string>
    <string name="action_settings">About</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_kiosk_map_tab">Map</string>
    <string name="map_not_ready">Map is not ready yet</string>

    <string name="title_activity_main">Posted</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_add_poster">Add Poster</string>
    <string name="kiosk">Kiosks</string>
    <string name="nearby">Nearby</string>
    <string name="posters">Posters</string>
    <string name="app_subtitle">UT Kiosk Tracker</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="organization">Organization</string>
    <string name="event_location">Event Location</string>
    <string name="name">Description</string>
    <string name="hint_name">Poster Name (Required)</string>
    <string name="hint_org">Organization (Optional)</string>
    <string name="hint_location">Place of Event (Optional)</string>
    <string name="hint_description">Description (Optional)</string>
    <string name="add_new_poster">Add New Poster</string>
    <string name="title_dev">Program Developers</string>
    <string name="title_concept">Concept &amp; Core Features Design</string>
    <string name="title_graphic">Graphics &amp; Photos</string>
    <string name="title_locations">Kiosk Locations Mapping</string>
    <string name="dots">&#8230;</string>
    <string name="hint_optional">(Optional)</string>
    <string name="hint_required">(Required)</string>
    <string name="title_activity_edit_poster">Edit Poster</string>
    <string name="edit_poster">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="date"> Expiration Date</string>
    <string name="slash">/</string>
    <string name="time">Time</string>
    <string name="deletePosterConfirm">Delete Poster</string>
    <string name="help">Help</string>
    <string name="clear_data">Clear Data</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="help1">Help</string>
    <string name="help2">Posted - UT Kiosk Tracker is an app designed to assist University of Texas Student Organization promotion officers keep track of which posters are posted where, and remind them if any poster is no longer relevant and should be taken down.\n</string>
    <string name="help3">Kiosks Tab</string>
    <string name="help4">On the kiosks tab, you can see the exact location of where every kiosk on campus is located at. By clicking on a marker\'s tooltip, you can examine which posters are posted at that kiosk location on the Kiosk Details page.\nThe locations are color coded by how many posters are present:\n0 Posters - Purple\n1 Poster - Green\n9 Posters - Yellow\n12 Posters - Orange\n15+ Posters - Red\n</string>
    <string name="help5">Posters Tab</string>
    <string name="help6">"On the posters tab, you can see a list of every poster you have ever posted. Any expired posters will be highlighted to stand out, and you can also choose how you want the posters to be sorted by. To add a new poster, just click on the floating add button near the bottom right corner and enter new poster's details, but the Poster Title field is the only field required to be filled out. You can click on the edit icon to the right of a poster to modify its information. You can even scan the poster by clicking the camera icon button.\n\nBy clicking on a poster, it opens the map checklist page, which will be discussed in detail below.\n"</string>
    <string name="help7">Kiosk Details</string>
    <string name="help8">"On the kiosk details page, you can see a picture of the kiosk location. Underneath the picture is a list of posters, and just like the Posters Tab, any expired posters will be highlighted to stand out, you can modify poster details, and go to the map checklist screen.\n\nHowever, there are slight differences between this list and the Posters Tab's list. The list here only shows posters that are posted at the selected kiosk location, and the add button on the lower right corner will automatically set the new poster as having been posted to the currently selected poster location.\n"</string>
    <string name="help9">Map Checklist</string>
    <string name="help10">Here, you can check or uncheck where a poster has been posted at, and you can see, at a glance, how many places and where the selected poster is published. Simply tap on a checkbox to check or uncheck it when you are posting or removing a poster from a kiosk. \n</string>
    <string name="help11">Add/Edit Poster</string>
    <string name="help12">On the add/edit page, you can edit and set the information of a poster. The only required field is the name of the poster, but the Name, as well as the organization and event date, will be visible in the lists on the Poster Tab and the Kiosk Details Page. A picture of the poster is also available at the bottom if you\'ve scanned a picture in before. Any expired posters will be highlighted in the list as a reminder to take it down.</string>
    <string name="delete_poster_text">Are you sure you want to delete this poster and all its information?</string>
    <string name="date_picker_btn">(OPTIONAL)</string>
    <string name="sort_mode_choose">Sort posters by:</string>
    <string name="ok">Ok</string>
    <string name="sortby">Sort By:</string>
    <string name="unsaved_question">Any unsaved changes will be lost. Continue?</string>
    <string name="infowindow_posters">Posters:</string>


</resources>
