<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="chiahua.ukiosktracker.MainActivity">
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/clear"
        android:orderInCategory="100"
        android:title="@string/clear_data"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

</menu>
