<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/edit_nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/edit_orgTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organization"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_nameET" />

    <TextView
        android:id="@+id/edit_locationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_location"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_orgET" />

    <TextView
        android:id="@+id/edit_descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_locationET" />

    <EditText
        android:id="@+id/edit_nameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/hint_name"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_nameTV"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/edit_orgET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_org"
        android:inputType="textCapWords"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/edit_orgTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nameET" />

    <EditText
        android:id="@+id/edit_locationET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/hint_location"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_orgET"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_locationTV"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/edit_descriptionET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/hint_description"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_locationET"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_descriptionTV"
        android:layout_marginLeft="16dp"
        />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_poster"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_descriptionET"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="editPoster"/>

</android.support.constraint.ConstraintLayout>