<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="chiahua.ukiosktracker.AboutActivity"
    tools:showIn="@layout/activity_about">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/extra_large_font"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/app_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_subtitle"
                android:textSize="@dimen/large_font"
                android:textAlignment="center"/>

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@mipmap/posted_icon"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/title_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_dev"
                android:textSize="@dimen/medium_font"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Chia-Hua Lu\nDaniel Zheng\nHung Bao\n"
                android:textSize="@dimen/regular_font"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/title_concept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_concept"
                android:textSize="@dimen/medium_font"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sabrina Herrero\n"
                android:textSize="@dimen/regular_font"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/title_graphic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_graphic"
                android:textSize="@dimen/medium_font"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Chia-Hua Lu\n"
                android:textSize="@dimen/regular_font"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/title_locations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_locations"
                android:textSize="@dimen/medium_font"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sabrina Herrero\nChia-Hua Lu\nDaniel Zheng\n"
                android:textSize="@dimen/regular_font"
                android:textAlignment="center"/>


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
